[NIFI-13735] update codemirror to use height 100% and fix jolt advanced ui scrollbar issue (#9255)
This closes #9255

--- a/nifi-frontend/src/main/frontend/apps/nifi-jolt-transform-ui/src/app/pages/jolt-transform-json-ui/feature/_jolt-transform-json-ui.component-theme.scss
+++ b/nifi-frontend/src/main/frontend/apps/nifi-jolt-transform-ui/src/app/pages/jolt-transform-json-ui/feature/_jolt-transform-json-ui.component-theme.scss
@@ -26,29 +26,16 @@
             width: 100%;
         }
 
-        .output-editor {
-            .CodeMirror.cm-s-nifi {
-                height: calc(100vh - 180px);
-                min-height: 345px;
-            }
-        }
-
-        .jolt-spec-editor {
-            .CodeMirror.cm-s-nifi {
-                height: calc(100vh - 422px);
-            }
-        }
-
         .input-editor {
             .CodeMirror.cm-s-nifi {
                 height: calc(100vh - 414px);
-                min-height: 116px;
+                min-height: 81px;
             }
         }
 
         .attributes-editor {
             height: calc(100vh - 362px);
-            min-height: 168px;
+            min-height: 126px;
         }
     }
 }
